tema kmom03 fixat overflow v2

--- a/themes/kmom03/scss/style.scss
+++ b/themes/kmom03/scss/style.scss
@@ -13,7 +13,7 @@ $text-color: #333;
 
 * {
     font-family: 'Roboto', sans-serif;
-    overflow-y: hidden; /* hide overflow content */
+    overflow-x: hidden; /* hide overflow content */
 }
 
 .container,
